// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavBar component > render when signed in 1`] = `
<div>
  <nav
    class="navbar navbar-expand bg-body-tertiary"
  >
    <div
      class="container-fluid text-center"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        Cook it yourself
      </a>
      <button
        aria-controls="navbarNav"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar-menu"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar-menu"
      >
        <ul
          class="navbar-nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/my-recipes"
            >
              My recipes
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`NavBar component > render when signed out 1`] = `
<div>
  <nav
    class="navbar navbar-expand bg-body-tertiary"
  >
    <div
      class="container-fluid text-center"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        Cook it yourself
      </a>
      <a
        class="btn btn-primary btn-sm"
        href="/sign-in"
      >
        Sign in
      </a>
    </div>
  </nav>
</div>
`;
